tests/snapshots/sfc/ts/patches__component_should_not_receive_scope_id_in_props.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createVNode as _createVNode } from "vue"

import MyComponent from './MyComponent.vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", { class: "wrapper" }, [ _createVNode(MyComponent, { class: "child" }) ]))
}
}

})
